--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,95 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
+# Compiled source #
+###################
+*.com
+*.class
 *.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
-*.out
-*.app
+*.o
+*.so
+*.o.d
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.swp
+*~.nib
+
+
+# Personal files in the iOS project #
+######################-
+*.mode1v3
+*.mode2v3
+xcuserdata
+*.xccheckout
+*.moved-aside
+*.xcuserstate
+*.xcscmblueprint
+
+*.mode*
+*.pbxuser
+*.perspective*
+
+!project.pbxproj
+proj.ios_mac/.idea/*
+proj.ios_mac/build/*
+
+#.LSOverride#
+
+# Generated files in the Android project #
+proj.android/libs/armeabi/*
+proj.android/libs/armeabi-v7a/*
+proj.android/libs/x86/*
+proj.android/obj/*
+
+proj.android/build/
+proj.android/gen/*
+proj.android/bin/*
+proj.android/assets/*
+
+.gradle/*
+proj.android/.gradle/*
+proj.android/.idea/*
+proj.android/*.iml
+proj.android/local.properties
+
+proj.android/libraries/*/build/
+proj.android/libraries/*/gen/*
+proj.android/libraries/*/bin/*
+proj.android/libraries/*/.idea/*
+proj.android/libraries/*/*.iml
+proj.android/libraries/*/local.properties
+
+
+*.apk
+
+# Generated documentation, it can be regenerated using doxygen #
+######################
+docs/html/*
+
+
+*/.idea/*
