--- a/src/proj.win32/src.vcxproj
+++ b/src/proj.win32/src.vcxproj
@@ -117,7 +117,8 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/proj.win32/bin/src/Debug/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -283,7 +284,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/proj.win32/bin/src/Release/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -449,7 +451,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/proj.win32/bin/src/MinSizeRel/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -614,7 +617,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll C:/Users/JV/Documents/Cocos/Projects/NineMensMorris/src/proj.win32/bin/src/RelWithDebInfo/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -805,10 +809,12 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BackgroundLayer.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\AppDelegate.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\HelloWorldScene.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\proj.win32\main.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\proj.win32\resource.h" />
+    <ClCompile Include="BackgroundLayer.cpp" />
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\AppDelegate.cpp" />
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\proj.win32\main.cpp" />
@@ -882,6 +888,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <Project>{323DF171-BE02-3E08-B68B-B891965F84A4}</Project>
       <Name>external</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="backgroundTexture.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
