fixed background image to relative path

--- a/src/proj.win32/src.vcxproj
+++ b/src/proj.win32/src.vcxproj
@@ -892,7 +892,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="backgroundTexture.png" />
+    <Image Include="bin\src\Debug\Resources\textures\backgroundTexture.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
