--- a/src/proj.win32/src.vcxproj
+++ b/src/proj.win32/src.vcxproj
@@ -809,7 +809,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Intersections.cpp" />
     <ClCompile Include="MainScene.cpp" />
+    <ClCompile Include="Position.cpp" />
     <ClInclude Include="BackgroundLayer.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\AppDelegate.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\HelloWorldScene.h" />
@@ -819,7 +821,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\AppDelegate.cpp" />
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\proj.win32\main.cpp" />
+    <ClInclude Include="Intersections.h" />
     <ClInclude Include="MainScene.h" />
+    <ClInclude Include="Position.h" />
     <ResourceCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\proj.win32\game.rc" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Resources\CloseNormal.png" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Resources\CloseSelected.png" />
