--- a/src/proj.win32/src.vcxproj.filters
+++ b/src/proj.win32/src.vcxproj.filters
@@ -19,6 +19,12 @@
     <ClCompile Include="MainScene.cpp">
       <Filter>Source Files\Classes\Scenes</Filter>
     </ClCompile>
+    <ClCompile Include="Intersections.cpp">
+      <Filter>Source Files\Classes\Positioning</Filter>
+    </ClCompile>
+    <ClCompile Include="Position.cpp">
+      <Filter>Source Files\Classes\Positioning</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\AppDelegate.h">
@@ -57,6 +63,12 @@
     <ClInclude Include="MainScene.h">
       <Filter>Source Files\Classes\Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="Intersections.h">
+      <Filter>Source Files\Classes\Positioning</Filter>
+    </ClInclude>
+    <ClInclude Include="Position.h">
+      <Filter>Source Files\Classes\Positioning</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\CMakeLists.txt" />
@@ -93,6 +105,9 @@
     </Filter>
     <Filter Include="Resources\textures">
       <UniqueIdentifier>{0873bb9c-929d-42b6-831e-aada6cb703a5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Classes\Positioning">
+      <UniqueIdentifier>{20df7298-4f35-4e3e-a4e1-96ce09677b3a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
