--- a/src/proj.win32/src.vcxproj
+++ b/src/proj.win32/src.vcxproj
@@ -809,9 +809,12 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Intersections.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="MainScene.cpp" />
     <ClCompile Include="Position.cpp" />
+    <ClCompile Include="SplashScene.cpp" />
     <ClInclude Include="BackgroundLayer.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\AppDelegate.h" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\HelloWorldScene.h" />
@@ -821,9 +824,13 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\AppDelegate.cpp" />
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\proj.win32\main.cpp" />
+    <ClInclude Include="Definitions.h" />
+    <ClInclude Include="GameScene.h" />
     <ClInclude Include="Intersections.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="MainScene.h" />
     <ClInclude Include="Position.h" />
+    <ClInclude Include="SplashScene.h" />
     <ResourceCompile Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\proj.win32\game.rc" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Resources\CloseNormal.png" />
     <ClInclude Include="C:\Users\JV\Documents\Cocos\Projects\NineMensMorris\src\Resources\CloseSelected.png" />
@@ -897,6 +904,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
   </ItemGroup>
   <ItemGroup>
     <Image Include="bin\src\Debug\Resources\textures\backgroundTexture.png" />
+    <Image Include="bin\src\Debug\Resources\textures\mainMenuBackground.png" />
+    <Image Include="bin\src\Debug\Resources\textures\splashScene.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
